--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Fullstack_Practical</title>
 </head>
 <h2 style="font-size: 300%;color:red;text-align: center;">Welcome to Fullstack Course</h2>
-<body style="background-color: blueviolet;">
-  <div style="background-color:black;color:white;padding:5px;border: 4px outset red;text-align: center;">
+<body style="background-color: aqua;">
+  <div style="background-color:black;color:white;padding:5px;border: 4px outset red;text-align: left;">
     <p>About</p>
   </div>
   <p>A full stack web development course will teach you how to design and develop complete 
@@ -15,15 +15,21 @@
       aspects of web development including front-end, back-end, databases, 
       debugging, testing, version control and other essential technologies
     </p>
-  <h3 style="font-size: 150%;color: red;text-align: center;">List Of practicals</h3>
+  <div style="background-color:black;color:white;padding:5px;border: 4px outset red;text-align: left;">
+    <p>List Of Practical</p>
+  </div>    
   <p>1.Create a Web page including HTML basic skeleton using HTML Editor and Online Sandbox Environment.
       <a href="https://www.google.co.in/">Practical 1</a></p>
+  <hr>
   <p>2.Live your first webpage on Git-Hub.
       <a href="https://www.google.co.in/">Practical 2</a></p>
+  <hr>
   <p>3. Create a web page showing a basic html structure using character Entities and span Tag.
       <a href="https://www.google.co.in/">Practical 3</a></p>
+  <hr>
   <p>Create a website having list of all practical and their individual practical Page https://www.google.co.in/s.
       <a href="https://www.google.co.in/">Practical 4</a></p>
+  <hr>
 
 </body>
 </html>
