--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>3. Create a web page showing a basic html structure using character Entities and span Tag.
       <a href="https://www.google.co.in/">Practical 3</a></p>
   <hr>
-  <p>Create a website having list of all practical and their individual practical Page https://www.google.co.in/s.
+  <p>4.Create a website having list of all practical and their individual practical Page Links.
       <a href="https://www.google.co.in/">Practical 4</a></p>
   <hr>
 
