--- a/Assignments/practical-2.html
+++ b/Assignments/practical-2.html
@@ -15,3 +15,4 @@
         debugging, testing, version control and other essential technologies
       </p>
       <h5 style="color: black;font-size: 150%;">Output</h5>
+      <img src="Assignment-2.png" alt="Live Page" width="460" height="345">
