--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <p>List Of Practical</p>
   </div>    
   <p>1.Create a Web page including HTML basic skeleton using HTML Editor and Online Sandbox Environment.
-      <a href="https://www.google.co.in/">Practical 1</a></p>
+      <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-1.html">Practical 1</a></p>
   <hr>
   <p>2.Live your first webpage on Git-Hub.
-      <a href="https://www.google.co.in/">Practical 2</a></p>
+      <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-2.html">Practical 2</a></p>
   <hr>
   <p>3. Create a web page showing a basic html structure using character Entities and span Tag.
-      <a href="https://www.google.co.in/">Practical 3</a></p>
+      <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-3.html">Practical 3</a></p>
   <hr>
   <p>4.Create a website having list of all practical and their individual practical Page Links.
-      <a href="https://www.google.co.in/">Practical 4</a></p>
+      <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-4.html">Practical 4</a></p>
   <hr>
 
 </body>
