--- a/Assignments/practical-2.html
+++ b/Assignments/practical-2.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="widht=device-width, initial-scale=1.0">
       <title>Practical-2</title>      
 </head> 
-<body>
+<body style="background-color: aqua;>
     <h2 style="color: red">Practical-2:Live your first webpage on Git-Hub.</h2>
     <h3 style="color: black;font-size: 200%;">Welcome to the Fullstack course</h3>
       <h4 style="color: black;font-size: 150%;">About Course</h4>
