--- a/Assignments/practical-3.html
+++ b/Assignments/practical-3.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="widht=device-width, initial-scale=1.0">
       <title>Practical-3</title>      
 </head> 
-<body>
+<body style="background-color: aqua;>
       <h2 style="color: red">Practical-3:Create a web page showing a basic html structure using character Entities and span Tag.</h2>
       <h1>Output</h1>
       <pre>
