--- a/Assignments/practical-1.html
+++ b/Assignments/practical-1.html
@@ -3,10 +3,11 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="widht=device-width, initial-scale=1.0">
-      <title>Practical-1</title>      
+      <title>Practical-1</title>
+      
 </head> 
-<body style="background-color: aqua;>
-      <h2 style="color: red">Practical-1:Create a Web page including HTML basic skeleton using 
+<body style="background-color: aqua;">
+      <h2 style="color: red;">Practical-1:Create a Web page including HTML basic skeleton using 
         HTML Editor and Online Sandbox Environment.</h2>
       <h3 style="color: black;font-size: 200%;">Welcome to the Fullstack course</h3>
       <h4 style="color: black;font-size: 150%;">About Course</h4>
