--- a/Assignments/Practical 5/home.html
+++ b/Assignments/Practical 5/home.html
@@ -17,10 +17,10 @@
 <p style="text-align: center;color: red;">Click on the logo to go to a new page and read more about the technology:</p>
 
 <map name="logo">
-  <area shape="rect" coords="20,10,171,164" alt="HTML" href="HTML.html">
-  <area shape="rect" coords="26,197,170,337" alt="JavaScript" href="JS.html">
-  <area shape="circle" coords="290,92.5,90" alt="CSS" href="CSS.html">
-  <area shape="poly" coords="289,204,232,225,241,302,288,329,339,301,346,222" alt="BootStrap" href="BS.html">
+  <area shape="rect" coords="20,10,171,164" alt="HTML" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical-5/HTML.html">
+  <area shape="rect" coords="26,197,170,337" alt="JavaScript" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical-5/JS.html">
+  <area shape="circle" coords="290,92.5,90" alt="CSS" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical-5/CSS.html">
+  <area shape="poly" coords="289,204,232,225,241,302,288,329,339,301,346,222" alt="BootStrap" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical-5/BS.html">
 </map>
 
 <map name="head">
