--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-4.html">Practical 4</a></p>
   <hr>
   <p>5.Create a Web-Page showing the use of Image-Map in the Web Application.
-    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical-5/home.html">Practical 5</a></p>
+    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical 5/home.html">Practical 5</a></p>
   <hr>
 
 </body>
