--- a/Assignments/Practical 5/home.html
+++ b/Assignments/Practical 5/home.html
@@ -29,7 +29,7 @@
     <area shape="rect" coords="343,12,563,75" alt="Practical 2" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-2.html">
     <area shape="rect" coords="573,12,780,75" alt="Practical 3" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-3.html">
     <area shape="rect" coords="790,12,1004,75" alt="Practical 4" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-4.html">
-    <area shape="rect" coords="1014,12,1228,75" alt="Practical 5" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-5.html">
+    <area shape="rect" coords="1014,12,1228,75" alt="Practical 5" href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical 5/home.html">
 </map>
 
 </body>
