--- a/Assignments/Practical 5/CSS.html
+++ b/Assignments/Practical 5/CSS.html
@@ -20,6 +20,7 @@
             is a simply designed language intended to simplify the process of making web pages presentable. 
             CSS allows you to apply styles to web pages. 
             More importantly, CSS enables you to do this independent of the HTML that makes up each web page.</p>
+        <a href="https://www.geeksforgeeks.org/css-introduction/">Click for more information</a>
     </div> 
 </body>
 </html>
