--- a/Assignments/Practical 5/HTML.html
+++ b/Assignments/Practical 5/HTML.html
@@ -23,6 +23,7 @@
             and embed content such as images and videos into a page. 
             This module will introduce the first two of these and introduce fundamental 
             concepts and syntax you need to know to understand HTML.</p>
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML"></a>
     </div> 
 </body>
 </html>
