--- a/Assignments/Practical 5/JS.html
+++ b/Assignments/Practical 5/JS.html
@@ -19,7 +19,7 @@
             The programs in this language are called scripts. They can be written right in a web page’s HTML and run automatically as the page loads.
             Scripts are provided and executed as plain text. They don’t need special preparation or compilation to run.
             In this aspect, JavaScript is very different from another language called Java.</p>
-        <a href="https://javascript.info/intro#:~:text=JavaScript%20was%20initially%20created%20to,this%20language%20are%20called%20scripts.&text=When%20JavaScript%20was%20created%2C%20it,brother%E2%80%9D%20of%20Java%20would%20help."></a>
+        <a href="https://javascript.info/intro#:~:text=JavaScript%20was%20initially%20created%20to,this%20language%20are%20called%20scripts.&text=When%20JavaScript%20was%20created%2C%20it,brother%E2%80%9D%20of%20Java%20would%20help.">Click for more information</a>
     </div> 
 </body>
 </html>
