--- a/index.html
+++ b/index.html
@@ -18,20 +18,29 @@
   <div style="background-color:black;color:white;padding:5px;border: 4px outset red;text-align: left;">
     <p>List Of Practical</p>
   </div>    
+  
   <p>1.Create a Web page including HTML basic skeleton using HTML Editor and Online Sandbox Environment.
       <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-1.html">Practical 1</a></p>
   <hr>
+
   <p>2.Live your first webpage on Git-Hub.
       <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-2.html">Practical 2</a></p>
   <hr>
+
   <p>3. Create a web page showing a basic html structure using character Entities and span Tag.
       <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-3.html">Practical 3</a></p>
   <hr>
+
   <p>4.Create a website having list of all practical and their individual practical Page Links.
       <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-4.html">Practical 4</a></p>
   <hr>
+
   <p>5.Create a Web-Page showing the use of Image-Map in the Web Application.
     <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical 5/home.html">Practical 5</a></p>
+  <hr>
+
+  <p>6.Create a Card Layout using CSS layout properties.
+    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical 6/practical-6.html">Practical 6</a></p>
   <hr>
 
 </body>
