--- a/Assignments/Practical 6/practical-6.html
+++ b/Assignments/Practical 6/practical-6.html
@@ -59,7 +59,7 @@ button {
 
 </style>
 </head>
-<body style="background-color: rgb(163, 159, 159);">
+<body style="background-color: aqua;">
 
 <h2 style="color: white;font-size:40px ;">Practical-6: Create a Card Layout using CSS layout properties.</h2>
 
