--- a/Assignments/Practical 5/JS.html
+++ b/Assignments/Practical 5/JS.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: rgba(139, 135, 135, 0.87);">
+<body style="background-color: aqua;">
 <head>
     <style>
         img {
