--- a/Assignments/Practical 5/home.html
+++ b/Assignments/Practical 5/home.html
@@ -9,7 +9,7 @@
             }
             </style>
     </head>
-<body style="background-color: rgba(139, 135, 135, 0.87);">
+<body style="background-color: aqua">
 
 <img src="line.png" alt="Head" usemap="#head" width="auto" height="auto" class="centre">
 <h2 style="text-align: center;color: white;">Inroduction to front end technologies</h2>
