--- a/Assignments/Practical 6/practical-6.html
+++ b/Assignments/Practical 6/practical-6.html
@@ -61,7 +61,7 @@ button {
 </head>
 <body style="background-color: aqua;">
 
-<h2 style="color: white;font-size:40px ;">Practical-6: Create a Card Layout using CSS layout properties.</h2>
+<h2 style="color: red;">Practical-6: Create a Card Layout using CSS layout properties.</h2>
 
 
 <div class="row">
