--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
   <p>6.Create a Card Layout using CSS layout properties.
     <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/Practical 6/practical-6.html">Practical 6</a></p>
   <hr>
+  
+  <p>7.Create a Web Page Layout using div tags.
+    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-7.html">Practical 7</a></p>
+  <hr>
 
 </body>
 </html>
