--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
     <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-7.html">Practical 7</a></p>
   <hr>
 
+  <p>8.Create a Web Page having Fixed Navigation Bar with the given content.
+    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-8.html">Practical 8</a></p>
+  <hr>
+
 </body>
 </html>
