--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
     <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-8.html">Practical 8</a></p>
   <hr>
 
+  <p>9.Create a Responsive Web Layout with Responsive Navigation Bar.
+    <a href="https://tanishq1410.github.io/Fullstack_Practical/Assignments/practical-9.html">Practical 9</a></p>
+  <hr>
+
 </body>
 </html>
